# atom

./: .gitignore  .travis.yml  README.md  pyrightconfig.json  requirements.txt  sparse_matrix.csv
atom/: CMakeLists.txt  package.xml
atom_calibration/: CMakeLists.txt  package.xml  requirements.txt  setup.py
atom_calibration/calibrations/agrob/: config.json  view_optimization.rviz
atom_calibration/calibrations/atlascar2/: first_guess.urdf.xacro  optimized.urdf.xacro
atom_calibration/calibrations/atlascar2/matlab_intrinsics/: top_left_camera.yaml  top_right_camera.yaml
atom_calibration/calibrations/pr2/: pr2_no_arms.xacro
atom_calibration/calibrations/tabb/: ds7.json
atom_calibration/calibrations/ur10e/: eye_anywhere.urdf.xacro  rviz.rviz
atom_calibration/calibrations/ur10e/both_eyes/: config.json  rviz.rviz  ur10e.urdf.xacro
atom_calibration/calibrations/ur10e/eye_in_hand/: rviz.rviz  ur10e.urdf.xacro
atom_calibration/calibrations/ur10e/eye_in_hand_chess/: config.json  rviz.rviz
atom_calibration/calibrations/ur10e/eye_to_base/: config.json  rviz.rviz  ur10e.urdf.xacro
atom_calibration/launch/: agrob_calibration.launch  atlascar2_calibration.launch  atlascar2_firstguess.launch  atlascar2_view_optimization.launch  pr2_calibration.launch
atom_calibration/launch/agrob/: agrob_view_optimization.launch
atom_calibration/launch/ur10e/: eye_calibration.launch  eye_calibration_view_optimization.launch
atom_calibration/meshes/: charuco_5X5_800x600.dae  charuco_5X5_800x600_v2.dae  charuco_5X5_800x600_v3.dae  charuco_5x5.dae
atom_calibration/meshes/chessboard_7x11_corners/: pattern.obj.mtl  pattern.stl  readme.txt
atom_calibration/scripts/: DirectionOfTransforms.m  automatic_data_collector  batch  calibrate  collect_data  configure_calibration_pkg  convert_from_rwhe_dataset.py  create_calibration_pkg  data_labeler_distributed  dataset_playback  dataset_playback2  dataset_playback2_lidar3d  dataset_playback2_old  dataset_playback_lidar3d  dataset_to_bag  draw_calibration_graph.py  dynamic_to_static_tf_rosbag  estimate_pattern_poses  example_calibration_graph.py  example_calibration_graph2.py  generate_xacro_from_results.py  inspect_atom_dataset  inspect_dataset  odometry_inspector  publish_charuco_markers.py  rename_dataset  set_initial_estimate  test_interactivemarker_change.py  test_label_depth_msg  test_rviz_bindings.py  transform_corrector  update_configure_script  view_errors.py
atom_calibration/scripts/conversions/: convert_from_rwhe_dataset.py  convert_from_rwhe_synthetic_dataset.py  convert_from_tabb_dataset.py  convert_to_rwhe_dataset.py  convert_to_tabb_dataset.py
atom_calibration/scripts/deprecated/: calibration.code-workspace  dataset_playback  dataset_playback2  dataset_playback2_lidar3d  dataset_playback2_old  test_pcd_io.py  view_errors.py  view_multi_errors.py  view_pattern.py  view_pattern3d.py
atom_calibration/scripts/tests/: test_charuco_board_detection  test_get_transformation_from_revolute_joint  test_ouster_lidar  test_rgb_labeler  test_tf_listener_from_different_topic
atom_calibration/scripts/utilities/: add_ground_truth_to_dataset  add_joints_to_config_file  add_noise_to_joint_state_in_bag  add_package_name_to_config_file  atom_examples.yml  download_atom_examples_data  filter_dataset_based_on_joint_states  generate_joint_space_tsne  inspect_atom_dataset  list_joints_in_bag  merge_atom_datasets  remove_collections_from_atom_dataset  rename_atom_dataset  split_atom_dataset  update_config_to_version_2  update_config_to_version_3  update_configure_script  update_dataset_from_version_2_to_3  view_calibration_config
atom_calibration/src/atom_calibration/: data_collector_and_labeler.py  interactive_data_labeler.py  patterns.py  sensor.py  utilities.py
atom_calibration/src/atom_calibration/calibration/: getters_and_setters.py  objective_function.py  patterns_config.py  visualization.py
atom_calibration/src/atom_calibration/collect/: configurable_tf_listener.py  data_collector.py  data_collector_and_labeler.py  depth_labeler  interactive_data_labeler.py  label_messages.py  label_msg.py  lidar3d_labeler  patterns.py  rgb_labeler
atom_calibration/src/atom_calibration/collect_distributed/: class_data_labeler.py
atom_calibration/src/atom_calibration/dataset_playback/: README.md  depth_manual_labeling.py  lidar3d_manual_labeling.py  lidar3d_manual_labelling.py  objective_function.py  visualization.py  visualization_lidar3d.py  visualization_old.py
atom_calibration/templates/: calibrate.launch  calibrate.launch.j2  collect_data.launch  config.rviz  config.yml  config.yml.update_to_version_2  config.yml.update_to_version_3  configure  dataset_playback.launch  dataset_playback.launch.j2  full_evaluation.launch  playbag.launch  set_initial_estimate.launch
atom_calibration/templates/rviz/: Camera.rviz.j2  Grid.rviz.j2  Image.rviz.j2  InteractiveMarker.rviz.j2  LaserScan.rviz.j2  MarkerArray.rviz.j2  PointCloud2.rviz  RobotModel.rviz.j2  TF.rviz.j2
atom_calibration/test/: create_calibration_pkg.test
atom_calibration/urdf/: prr_simple.xacro
atom_core/: CMakeLists.txt  package.xml  setup.py
atom_core/scripts/: calibrate  main.py  test_json_nparray
atom_core/src/atom_core/: atom.py  cache.py  chessboard.py  config_io.py  config_visualization.py  dataset_io.py  drawing.py  geometry.py  getters_and_setters.py  joint_models.py  key_press_manager.py  naming.py  objective_function.py  opt_utilities.py  optimization_utils.py  patterns.py  pypcd.py  results_yml_io.py  ros_utils.py  rosbag2.py  rospy_urdf_to_rviz_converter.py  system.py  transformations.py  utilities.py  utils.py  vision.py  visualization.py  xacro_io.py
atom_core/unit_tests/: test_atom.py  test_config_io.py
atom_rviz_plugins/image_display_with_click/: CMakeLists.txt  old_CMakeLists.txt  package.xml  plugin_description.xml
atom_rviz_plugins/image_display_with_click/scripts/: test_image_display_with_click
atom_rviz_plugins/image_display_with_click/src/: image_display_with_click.cpp  image_display_with_click_base.cpp  mouse_watcher.cpp  plugin_load.cpp
(+1380 files in other folders)
