<?xml version="1.0"?>
<package format="2">
  <name>atom</name>
  <version>0.0.0</version>
  <description>The atom package</description>

  <maintainer email="pr2admin@todo.todo">pr2admin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>atom_calibration</exec_depend>
  <exec_depend>atom_core</exec_depend>
  <exec_depend>atom_evaluation</exec_depend>
  <exec_depend>atom_msgs</exec_depend>
  <exec_depend>selected_points_publisher</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
