<?xml version="1.0"?>
<package format="2">
  <name>atom</name>
  <version>0.0.0</version>
  <description>A meta package for compiling all atom packages.</description>

  <maintainer email="mriem@ua.pt">Miguel Riem Oliveira</maintainer>
  <license>See the licence at https://github.com/lardemua/atom</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>atom_calibration</exec_depend>
  <exec_depend>atom_core</exec_depend>
  <exec_depend>atom_evaluation</exec_depend>
  <exec_depend>atom_msgs</exec_depend>
  <exec_depend>selected_points_publisher</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
