<?xml version="1.0"?>
<package format="2">
  <name>atom_calibration</name>
  <version>0.0.0</version>
  <description>The atom_calibration package</description>

  <author email="mike@todo.todo">Miguel Oliveira</author>

  <maintainer email="mike@todo.todo">Miguel Oliveira</maintainer>
  <maintainer email="efp@ua.pt">Eurico Pedrosa</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/lardemua/atom</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>

  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>python-colorama</exec_depend>
  <exec_depend>python-jinja2</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>python-graphviz-pip</exec_depend>

  <export>
  </export>
</package>
