<?xml version="1.0"?>
<package format="2">
  <name>atom_core</name>
  <version>0.0.0</version>
  <description>
      ATOM calibration core package.
      This package contains the actual calibration method that uses atomic transformations.
  </description>

  <author email="mike@todo.todo">Miguel Oliveira</author>

  <maintainer email="mike@todo.todo">Miguel Oliveira</maintainer>
  <maintainer email="efp@ua.pt">Eurico Pedrosa</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/lardemua/atom</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>

  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>

  <export>
  </export>
</package>
